# multi-agent-starter-python-poc

./: .env.example  .gitignore  README.md  pyproject.toml
src/: agent.py
tests/: test_agent.py
